--- a/index.html
+++ b/index.html
@@ -56,30 +56,30 @@
 		<section class="backgroundColor">
 			<div class="form-group">
 				<div class="text-center">
-					<img src="cat_dog.jpg" class="img-fluid" alt="Responsive image">
+					<img src="img/chary_connectme.jpg" class="img-fluid" alt="Responsive image" style="width:80%">
 					<div class="one-liner">
-						<p>Simple</p>
+						<h5>“Becoming well known is the most valuable element in the connection process.” </h5>
 					</div>
 				</div>
 				<br><br>
 				<div class="text-center">
-					<img src="cat_dog.jpg" class="img-fluid" alt="Responsive image">
+					<img src="img/neha_connectme.jpg" class="img-fluid" alt="Responsive image" style="width:80%">
 					<div class="one-liner">
-						<p>Intuitive</p>
+						<h5>"If I can reach further, it is by connecting with influential nodes."</h5>
 					</div>
 				</div>
 				<br><br>
 				<div class="text-center">
-					<img src="cat_dog.jpg" class="img-fluid" alt="Responsive image">
+					<img src="img/keerthi_connectme.jpg" class="img-fluid" alt="Responsive image" style="width:80%">
 					<div class="one-liner">
-						<p>Free</p>
+						<h5>"Instead of using technology to automate processes, think about using technology to enhance human interaction."</h5>
 					</div>
 				</div>
 			</div>
 		</section>
 		<nav class="page-footer font-small" style="width: 100%">
 			<div class="container">
-				<div class="row text-center d-flex flex-nowrap justify-content-center pt-5 mb-3">
+				<div class="row text-center d-flex flex-nowrap justify-content-center pt-5 mb-3" >
 					<div class="col-md-2 mb-3">
 						<h6 class="text-uppercase font-weight-bold">
 						<a href="#!">Help</a>
