--- a/screen3.html
+++ b/screen3.html
@@ -29,6 +29,7 @@
         <center>
           <h6 class="form-text text-muted">Enter one to three profession</h6></center><br>
         <input type="profession" name="profession" class="form-control" id="profession" placeholder="For example: Doctor, Software Engineer">
+        <small id="warningmessage" class="text-muted"></small>
       </div><br>
       <div class="form-group">
         <div class="professiondiv1" style="display:none">
