--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
       </div>
       <div class="form-group">
         <label for="location">Confirm Password</label>
-        <input class="form-control" type="password" name="reenter-password" required>
+        <input class="form-control" type="password" name="reenter-password" id="repassword" required>
         <small id="repasswordHelpInline" class="text-muted"></small>
       </div>
       <div class="form-group">
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="buttonHolder">
-        <button type="submit" class="btn btn-primary" style="width:20%;align:center;">Submit</button>
+        <button id="signup" type="submit" class="btn btn-primary" style="width:20%;align:center;">Submit</button>
       </div>
     </form>
     <footer class="page-footer font-small">
