--- a/login.html
+++ b/login.html
@@ -38,7 +38,8 @@
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" required>
+        <input type="password" class="form-control" name="password" id="password" required>
+        <small id="passwordHelpInline" class="text-muted"></small>
       </div>
       <div class="form-group" style="display:none">
         <label id="errormessage" for="invalidemailorpassword">Your email or user name doesn’t match your password. Please try again.</label>
@@ -51,7 +52,7 @@
         <a href="#">Forgot Password</a>
       </div>
       <div class="buttonHolder">
-        <button type="submit" class="btn btn-primary" style="width:20%;align:center;">Log In</button>
+        <button id="login" type="submit" class="btn btn-primary" style="width:20%;align:center;">Log In</button>
       </div>
       <div class="text-center">
         <img src="img/cat_dog.jpg" class="img-fluid" alt="Responsive image">
