--- a/screen5.html
+++ b/screen5.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Name</title>
+  <title>ConnectMe</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
@@ -23,7 +23,7 @@
       <div class="form-group">
         <div class="form-group">
           <h5>Enter website link</h5>
-          <input id="websitelink" class="form-control" type="websiteLink" name="websiteLink" required>
+          <input id="websitelink" class="form-control" type="websiteLink" name="websiteLink" placeholder="www.ConnectMe.com" required>
         </div>
         <div class="buttonHolder">
           <button id="nextbutton" type="submit" class="btn btn-primary" style="width:20%">Next</button>
