--- a/screen6.html
+++ b/screen6.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Name</title>
+  <title>ConnectMe</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
@@ -22,7 +22,8 @@
     <form data-enter-website="form">
       <div class="form-group">
         <p>What do you want your link to be?</p>
-        <input id="connectmelink" class="form-control" type="connectmelink" name="connectmelink" required>
+        <input id="connectmelink" class="form-control" type="connectmelink" name="connectmelink" placeholder="http://connect.me/username" required>
+        <small id="warningmessage" class="text-muted"></small>
       </div>
       <div class="form-group">
         <div class="g-recaptcha" data-sitekey="6LfKURIUAAAAAO50vlwWZkyK_G2ywqE52NU7YO0S" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
@@ -30,7 +31,7 @@
         <div class="help-block with-errors"></div>
       </div>
       <div class="buttonHolder">
-        <input type="submit" class="btn btn-primary btn-send" value="Next" style="width:20%;">
+        <input id="nextbutton" type="submit" class="btn btn-primary btn-send" value="Next" style="width:20%;">
       </div>
     </form>
     <nav class="page-footer font-small">
