--- a/userpage.html
+++ b/userpage.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Username</title>
+	<title>ConnectMe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/styles.css">
